fixed? something with precompiled headers

--- a/accelSwitch/accelSwitch.vcxproj
+++ b/accelSwitch/accelSwitch.vcxproj
@@ -141,10 +141,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="accelSwitch.cpp" />
+    <ClCompile Include="accelSwitch.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Use</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
