--- a/dpiSwitcher/dpiSwitcher.vcxproj.filters
+++ b/dpiSwitcher/dpiSwitcher.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClInclude Include="Resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="accelSwitcher.h">
+    <ClInclude Include="dpiSwitcher.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -35,12 +35,12 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="accelSwitcher.cpp">
+    <ClCompile Include="dpiSwitcher.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="accelSwitcher.rc">
+    <ResourceCompile Include="dpiSwitcher.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
@@ -48,7 +48,7 @@
     <Image Include="small.ico">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="accelSwitcher.ico">
+    <Image Include="dpiSwitcher.ico">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
